; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_handle_T_option.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_handle_T_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@user_templatename = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @handle_T_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_T_option(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i64 @lemonStrlen(i8* %3)
  %5 = add nsw i64 %4, 1
  %6 = call i64 @malloc(i64 %5)
  %7 = inttoptr i64 %6 to i8*
  store i8* %7, i8** @user_templatename, align 8
  %8 = load i8*, i8** @user_templatename, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32 (...) @memory_error()
  br label %12

12:                                               ; preds = %10, %1
  %13 = load i8*, i8** @user_templatename, align 8
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 @lemon_strcpy(i8* %13, i8* %14)
  ret void
}

declare dso_local i64 @malloc(i64) #1

declare dso_local i64 @lemonStrlen(i8*) #1

declare dso_local i32 @memory_error(...) #1

declare dso_local i32 @lemon_strcpy(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
